melhorei algumas coisas

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
 
     <footer>
-        <p>Site criado pelo paiva</p>
+        <p>Site criado pelo <a href="https://www.youtube.com/shorts/ABhaUkke8YE" target="_blank">paiva</a></p>
     </footer>
 
 </body>
